2008-09-21  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi: Update for 4.2.4 release.

2008-09-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm:  Add support for enhanced text mode.

2008-09-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_labels3d):  Clip "splot with labels" against
	plot boundaries in "set view map" mode, for consistency with 2D plots.

2008-09-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Force update of cursor position after
	every polyline.
	Bugfix

2008-09-06  Juergen Wieferink <wieferink@freenet.de>

	* src/term.c (enhanced_recursion):  Add curly braces {} to the list of
	characters that must be escaped in postscript enhanced mode.
	Bug #1968636

2008-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): NULL labels are OK if requested via
	'set xtics (x1, x2, ...)' as opposed to read from a data file.

2008-09-02  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c src/gp_time.h src/internal.c (f_strftime f_strptime)
	src/internal.h demo/stringvar.dem docs/gnuplot.doc:
	Introduce two new functions 'strftime' and 'strptime', which do
	essentially the same as the standard C functions with the same names,
	but use seconds since 2000 instead of struct tm.
	This has been in 4.3 cvs for 18 months now with no reported problems.
	(Patchset #1199186 July 2005). 

2008-08-16  Ethan Merritt  <merritt@u.washington.edu>

	* term/dumb.trm: Accept terminal size in the form used by most other
	terminal drivers.   'set term dumb size 80,23"

2008-08-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Typo in show colornames.

2008-08-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/readline.c (ansi_getc): Teach built-in readline to map
	CSI-H to ^A and CSI-F to ^E, which offers some hope that the <end> and
	<home> keys will do something useful.
	Bug #1556607
